--- a/src/package.json
+++ b/src/package.json
@@ -18,7 +18,7 @@
 		"build": "npm run tsc",
 		"tslint": "cd .. && tslint \"**/*.ts\" --config tslint.json --exclude \"**/node_modules/**\"",
 		"ci.tslint": "npm i && tslint '**/*.ts' --config '../tslint.json' --exclude '**/node_modules/**' --exclude '**/platforms/**'",
-		"prepack": "npm run build.native",
+		"prepack": "npm run build",
 		"plugin.prepare": "npm run build && cd ../demo && tns plugin remove nativescript-ssi-tv && tns plugin add ../src",
 		"clean": "npx rimraf -- node_modules package-lock.json && npm i"
 	},
