--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@simplec-dev/nativescript-ssi-tv",
-	"version": "2.0.3",
+	"version": "1.1.0",
 	"description": "Plugin for AndroidTV to send key presses to application.",
 	"main": "activity",
 	"nativescript": {
@@ -26,7 +26,13 @@
 	"scripts": {
 		"tsc": "npm i && tsc",
 		"build": "npm run tsc",
-		"clean": "npx rimraf -- node_modules package-lock.json && npm i"
+		"tslint": "cd .. && tslint \"**/*.ts\" --config tslint.json --exclude \"**/node_modules/**\"",
+		"ci.tslint": "npm i && tslint '**/*.ts' --config '../tslint.json' --exclude '**/node_modules/**' --exclude '**/platforms/**'",
+		"prepack": "npm run build",
+		"plugin.prepare": "npm run build && cd ../demo && tns plugin remove nativescript-ssi-tv && tns plugin add ../src",
+		"clean": "npx rimraf -- node_modules package-lock.json && npm i",
+		"postinstall": "node postinstall.js",
+		"preuninstall": "node preuninstall.js"
 	},
 	"keywords": [
 		"NativeScript",
@@ -44,11 +50,9 @@
 	"license": "Apache-2.0",
 	"homepage": "https://github.com/simplec-dev/nativescript-ssi-tv.git",
 	"devDependencies": {
-		"@nativescript/core": "~8.3.0",
-		"@nativescript/android": "~8.5.0",
-		"@nativescript/ios": "~8.5.0",
-		"@nativescript/types": "~8.5.0",
-		"typescript": "~4.8.4",
+		"tns-core-modules": "^6.0.0",
+		"tns-platform-declarations": "^6.0.0",
+		"typescript": "~3.4.5",
 		"prompt": "^1.0.0",
 		"rimraf": "^2.6.3",
 		"tslint": "^5.12.1",
